<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>codes.castled.gpexpansion</groupId>
  <artifactId>gpexpansion</artifactId>
  <version>1.0.8</version>
  <name>GPExpansion</name>
  <description>GriefPrevention Expansion</description>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- Paper's new calendar versioning. Matches GriefPrevention3D for 1.26.1 support. -->
    <paper.version>26.1.2.build.18-alpha</paper.version>
    <adventure.minimessage.version>4.17.0</adventure.minimessage.version>
    <vault.api.version>1.7</vault.api.version>
  </properties>

  <repositories>
    <repository>
      <id>papermc-repo</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>sonatype</id>
      <url>https://oss.sonatype.org/content/groups/public/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>codemc-releases</id>
      <url>https://repo.codemc.io/repository/maven-releases/</url>
    </repository>
    <repository>
      <id>codemc-snapshots</id>
      <url>https://repo.codemc.io/repository/maven-snapshots/</url>
    </repository>
    <repository>
      <id>codemc-nms</id>
      <url>https://repo.codemc.io/repository/nms/</url>
    </repository>
    <repository>
      <id>placeholderapi</id>
      <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- Paper API provided by the server -->
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>${paper.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- Vault API (optional economy) via JitPack -->
    <dependency>
      <groupId>com.github.MilkBowl</groupId>
      <artifactId>VaultAPI</artifactId>
      <version>${vault.api.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- MiniMessage for parsing colors/formatting -->
    <dependency>
      <groupId>net.kyori</groupId>
      <artifactId>adventure-text-minimessage</artifactId>
      <version>${adventure.minimessage.version}</version>
    </dependency>
    
    <!-- Legacy ampersand serializer used in Mini.deserializeToLegacy -->
    <dependency>
      <groupId>net.kyori</groupId>
      <artifactId>adventure-text-serializer-legacy</artifactId>
      <version>${adventure.minimessage.version}</version>
    </dependency>
    <dependency>
      <groupId>me.clip</groupId>
      <artifactId>placeholderapi</artifactId>
      <version>2.11.6</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>GPExpansion</finalName>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <relocations>
                <relocation>
                  <pattern>net.kyori.adventure.text.minimessage</pattern>
                  <shadedPattern>codes.castled.gpexpansion.libs.minimessage</shadedPattern>
                </relocation>
              </relocations>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
